# SO_PROJEKT_016

./: CMakeLists.txt  Projekt16_Kamil_Gębala_151868.sln  README.md  common.h  init.cpp  kasjer.cpp  krzeslo.cpp  narciarz.cpp  pracownik_dol.cpp  pracownik_gora.cpp  turysta.cpp  ~$Raport.docx
Projekt16_Kamil_Gębala_151868/: Projekt16_Kamil_Gębala_151868.vcxproj  README.md  chair.cpp  chair.h  lift.cpp  lift.h  main.cpp  skier.cpp  skier.h  skistation.cpp  skistation.h
